Fix alignment again

--- a/modules/static/css/games/discover.css
+++ b/modules/static/css/games/discover.css
@@ -124,6 +124,7 @@
 
 .library-item {
     text-align: center;
+	justify-items:center;
     margin-bottom: 20px;
 }
 
